<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:orientation="vertical">
    <include
        android:id="@+id/title"
        layout="@layout/layout_fragment_title"/>
    <LinearLayout
        android:id="@+id/ll_account"
        android:layout_marginTop="15dp"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/my_item_bg">
        <ImageView
            android:id="@+id/iv_my_head"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/my_head"/>
        <LinearLayout
            android:id="@+id/ll_account_tip"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rank"
                android:textSize="14sp"/>
            <TextView
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tel"
                android:textSize="14sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_account_des"
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_rank"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:drawableLeft="@drawable/my_v"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="14"
                android:textColor="@color/my_v"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/tv_tel"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="18812344321"
                android:textSize="14sp"/>
        </LinearLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/right_arrow"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_address"
        android:layout_marginTop="15dp"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/my_item_bg">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/my_address"
            android:textSize="14sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/right_arrow"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_socre"
        android:layout_marginTop="15dp"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/my_item_bg">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/my_score"
            android:textSize="14sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/right_arrow"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_message_center"
        android:layout_marginTop="0dp"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/my_item_bg">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/message_center"
            android:textSize="14sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/right_arrow"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_setting"
        android:layout_marginTop="15dp"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/my_item_bg">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textSize="14sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/right_arrow"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_login"
        android:layout_marginTop="50dp"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:paddingLeft="150dp"
        android:paddingRight="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="14sp"
        android:background="@drawable/login_bg"/>
</LinearLayout>
